--- a/main.css
+++ b/main.css
@@ -1,3 +1,23 @@
 body {
-  background-color: darksalmon;
+  background-color: rgb(231, 165, 143);
+}
+
+.name {
+  text-align: center;
+  font-size: 30px;
+}
+
+hr {
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 5px;
+}
+
+.contact {
+  text-align: center;
+  font-size: 20px;
+}
+
+.experience {
+  text-align: left;
+  font-size: 15px;
 }
