--- a/main.css
+++ b/main.css
@@ -1,78 +1,106 @@
 body {
-  background-color: rgb(231, 165, 143);
-  padding: 25px;
-}
+  background-image: linear-gradient(
+    to bottom,
+    rgba(212, 0, 255, 0.5),
+    rgba(212, 0, 255, 0.5)
+  ), url("https://images.unsplash.com/photo-1607337202714-a88f7abbdee7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80");
+   }
 
 .name {
   text-align: center;
   font-size: 30px; 
-  color: darkmagenta;
+  color: rgb(143, 235, 38);
   font-family: Trattatello, fantasy;
+  border-style: ridge;
+  border-width: 5px
 }
 
 hr {
-  border: 2px solid rgb(0, 0, 0);
-  border-radius: 5px;
+  color: rgb(143, 235, 38);
+  border-radius: 40px;
 }
 
 .contact {
   text-align: center;
   font-size: 20px;
-  color: rgb(58, 93, 190);
+  color: rgb(143, 235, 38);
+  -webkit-text-stroke: .25px;
+  -webkit-text-stroke-color: whitesmoke;
   font-family: monospace;
 }
 
 .experience {
   text-align: left;
-  font-size: 14px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 30px;
+  color: rgb(143, 235, 38);
+  font-family: 'Aclonica';font-size: 22px;
+  border-style: hidden;
 }
 
 .adtalem {
   text-align: left;
-  color: firebrick;
+  color: lavender;
   font-size: 14px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-style: italic;
+  font-style: bold;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border-style: dotted;
 }
 
 .adtalem-timeframe {
   text-align: right;
-  color: firebrick;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 12px;
+  color: lavender;
+  font-family: Hawaii 5-0, sans-serif;
+  font-size: 15px;
+  -webkit-text-stroke: .50px;
+  -webkit-text-stroke-color: blueviolet;
+  border-style: hidden;
+  border-color: red;
 }
 
 .chamberlain {
   text-align: left;
-  color: firebrick;
+  color: lavender;
   font-size: 14px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: cursive;
+  border-style: dashed;
 }
 
 .chamberlain-timeframe {
   text-align: right;
-  color: firebrick;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 12px;
+  color: lavender;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 16px;
+  -webkit-text-stroke: 1px;
+  -webkit-text-stroke-color: blueviolet;
+  border-style: hidden;
+  border-color: whitesmoke;
 }
 
 .chamberlain-SSA {
   text-align: left;
-  color: firebrick;
-  font-size: 12px;
+  color: lavender;
+  font-size: 16px;
   font-family: Trattatello, fantasy;
+  border-style: outset;
 }
 
 .chamberlain-SSA-timeframe {
   text-align: right;
-  color: firebrick;
-  font-family: Trattatello, fantasy;
-  font-size: 10px;
+  color: lavender;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 14px;
+  -webkit-text-stroke: 1px;
+  -webkit-text-stroke-color: blueviolet;
+  border-style: hidden;
+  border-color: blue;
 }
 
 ul {
   text-align: left;
   color: chartreuse;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 16px;
+  -webkit-text-stroke: .15px;
+  -webkit-text-stroke-color: aliceblue;
 }
